# BookOS-Settings

./: KEY.gpg  PKGBUILD  README.md  bookos-settings.install  index.html
bookos-settings/: FETCH_HEAD  config  packed-refs
bookos-settings/objects/pack/: pack-416c868b75ee01a761cf6a8b3f3471d6c7b83729.idx  pack-416c868b75ee01a761cf6a8b3f3471d6c7b83729.rev
bookos-settings/refs/heads/: main
dists/bookworm/: InRelease  Release  Release.gpg
src/: index.html  main.js  style.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extra/: 61-samsung-galaxybook.hwdb  bookos-battery-adaptive.service  bookos-battery-adaptive.timer  bookos-battery-logger.timer  bookos-register-shortcut.sh  bookos-thermal-logger.service  bookos-thermal-logger.sh  bookos-toggle-as-user.sh  samsung-settings.acpi
src-tauri/extra/ai/: bookos-battery-train.service  bookos-battery-train.timer  predict.py  setup.sh  train.py
src-tauri/extra/lockscreen/: BookBar.qml  LockScreenUi.qml  MainBlock.qml
src-tauri/extra/scripts/: deb-postinst  deb-postrm  deb-prerm  rpm-scriptlets.txt
src-tauri/extra/sddm-theme/: Main.qml  metadata.desktop  theme.conf
src-tauri/extra/search/: bookos-semantic-krunner.desktop
src-tauri/src/: buds.rs  hardware_control.rs  main.rs
src/BookOS-Settings-0.4.0/: README.md
src/BookOS-Settings-0.4.0/src/: tauri-api.js
src/BookOS-Settings-0.4.1/: .gitignore  README.md
src/BookOS-Settings-0.4.1/aur/: build-release.sh
src/BookOS-Settings-0.4.1/src/: style.css  (+1 more)
src/BookOS-Settings-0.4.1/src-tauri/: Cargo.toml  sync-rqs-upstream.sh  tauri.conf.json
src/BookOS-Settings-0.4.1/src-tauri/capabilities/: default.json
src/BookOS-Settings-0.4.1/src-tauri/extra/: 99-bookos-power.rules  bookos-battery-logger.sh
src/BookOS-Settings-0.4.1/src-tauri/extra/search/: indexador.py  watcher.sh
src/BookOS-Settings-0.4.1/src-tauri/rqs_lib/src/: manager.rs
src/BookOS-Settings-0.4.1/src-tauri/src/: bluez_profile.rs  hardware_control.rs  p2p.rs  search.rs
src/modules/: home.js  i18n.js  pages.js
(+18 files in other folders)
